# bmad-skateboard-ecommerce

./: .firebaserc  .gitignore  .pre-commit-config.yaml  docker-compose.yml  firebase.local.json  firestore.rules  firestore.rules.local
.claude/: settings.local.json
.github/workflows/: backend-ci.yml  frontend-ci.yml  infra-ci.yml
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: 1-1-project-foundation-and-gcp-infrastructure.md  1-2-cloud-sql-provisioning-alembic-initial-schema-ci-gate.md  1-3-design-system-foundation.md  1-5-chat-turn-endpoint-sse-delivery-contract.md  deferred-work.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  product-brief-skate-ecommerce.md  ux-design-directions.html  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: deploy.md  design-system.md
infra/: README.md
infra/github/: terraform.tfvars.example  (+1 more)
skate-assistant-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
skate-assistant-backend/app/: __init__.py  config.py  dependencies.py  main.py
skate-assistant-backend/app/agents/: __init__.py
skate-assistant-backend/app/api/: exceptions.py
skate-assistant-backend/app/api/v1/: __init__.py  chat.py  ops.py  schemas.py
skate-assistant-backend/app/compatibility/: __init__.py
skate-assistant-backend/app/models/: __init__.py  errors.py
skate-assistant-backend/app/observability/: __init__.py  logging.py  tracing.py
skate-assistant-backend/app/services/: __init__.py  schema_version.py  turn_state.py
skate-assistant-backend/migrations/: env.py
skate-assistant-backend/migrations/versions/: 20260507_0001_initial_schema.py
skate-assistant-backend/tests/: conftest.py  helpers.py
skate-assistant-backend/tests/integration/: test_chat_turn_sse.py
skate-assistant-backend/tests/unit/: test_chat_schemas.py  test_exceptions.py  test_health.py  test_schema_version.py  test_turn_state.py
skate-assistant-frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
(+36 files in other folders)
