[project]
name = "skate-assistant-backend"
version = "0.1.0"
description = "Skate Assistant backend — FastAPI + ADK + Cloud Run"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115,<0.116",
    "uvicorn[standard]>=0.34,<0.35",

    # Pinned explicitly per Architecture risk-mitigation guidance.
    # ADK is the highest-risk pin per the foundation story Dev Notes.
    # Verified version: 1.5.0 (verified 2026-05-07).
    # If breakage surfaces, defer to LangGraph per ADR.
    "google-adk==1.5.0",

    # Pinned explicitly to avoid surprise breakage on the LLM client surface.
    "anthropic==0.40.0",

    # Configuration
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",

    # Database / migrations (Alembic init lands here; schema in Story 1.2)
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<0.31",
    "alembic>=1.14,<2",
    "pgvector>=0.3,<0.4",

    # GCP / Firebase
    "firebase-admin>=6.5,<7",
    "google-cloud-firestore>=2.19,<3",
    "google-cloud-secret-manager>=2.21,<3",

    # Observability
    "opentelemetry-api>=1.29,<2",
    "opentelemetry-sdk>=1.29,<2",
    "opentelemetry-instrumentation-fastapi>=0.50b0,<1",
    "opentelemetry-exporter-gcp-trace>=1.7,<2",

    # Cache (lib installed; Memorystore wiring in Story 1.13/1.14)
    "redis>=5.2,<6",

    # HTTP client
    "httpx>=0.27,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "httpx>=0.27,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pre-commit>=4.0,<5",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
